[gd_scene load_steps=3 format=3 uid="uid://1jwyx7dgc2th"]

[ext_resource type="Script" uid="uid://c2coaot77586c" path="res://gui/level_entry.gd" id="1_ug1dm"]
[ext_resource type="Theme" uid="uid://txi6gmorkaap" path="res://assets/woodcutter_theme.tres" id="2_vy7bm"]

[node name="Levelentry" type="MarginContainer"]
offset_right = 383.0
offset_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 6
script = ExtResource("1_ug1dm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
theme = ExtResource("2_vy7bm")
color = Color(0.205117, 0.205117, 0.205117, 0.635294)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("2_vy7bm")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_vy7bm")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LevelIDLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0.113725, 0.407843, 0.309804, 1)
theme_override_colors/font_outline_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 30
text = "X"

[node name="LevelNameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 2.58
text = "Level Name"

[node name="LevelPlayButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vy7bm")
text = "Play"

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/LevelPlayButton" to="." method="_on_level_play_button_pressed"]
